croaring-sys/CRoaring/bindgen_bundled_version.rs

extern "C" {
    #[doc = " Perform internal consistency checks.\n\n Returns true if the bitmap is consistent. It may be useful to call this\n after deserializing bitmaps from untrusted sources. If\n roaring64_bitmap_internal_validate returns true, then the bitmap is\n consistent and can be trusted not to cause crashes or memory corruption.\n\n If reason is non-null, it will be set to a string describing the first\n inconsistency found if any."]
    pub fn roaring64_bitmap_internal_validate(
        r: *const roaring64_bitmap_t,
        reason: *mut *const ::core::ffi::c_char,
    ) -> bool;
}
extern "C" {
    #[doc = " Return true if the two bitmaps contain the same elements."]
    pub fn roaring64_bitmap_equals(
        r1: *const roaring64_bitmap_t,
        r2: *const roaring64_bitmap_t,
    ) -> bool;
}
extern "C" {
    #[doc = " Return true if all the elements of r1 are also in r2."]
    pub fn roaring64_bitmap_is_subset(
        r1: *const roaring64_bitmap_t,
        r2: *const roaring64_bitmap_t,
    ) -> bool;
}
extern "C" {
    #[doc = " Return true if all the elements of r1 are also in r2, and r2 is strictly\n greater than r1."]
    pub fn roaring64_bitmap_is_strict_subset(
        r1: *const roaring64_bitmap_t,
        r2: *const roaring64_bitmap_t,
    ) -> bool;
}
extern "C" {
    #[doc = " Computes the intersection between two bitmaps and returns new bitmap. The\n caller is responsible for free-ing the result.\n\n Performance hint: if you are computing the intersection between several\n bitmaps, two-by-two, it is best to start with the smallest bitmaps. You may\n also rely on roaring64_bitmap_and_inplace to avoid creating many temporary\n bitmaps."]
    pub fn roaring64_bitmap_and(
        r1: *const roaring64_bitmap_t,
        r2: *const roaring64_bitmap_t,
    ) -> *mut roaring64_bitmap_t;
}
extern "C" {
    #[doc = " Computes the size of the intersection between two bitmaps."]
    pub fn roaring64_bitmap_and_cardinality(
        r1: *const roaring64_bitmap_t,
        r2: *const roaring64_bitmap_t,
    ) -> u64;
}
extern "C" {
    #[doc = " In-place version of `roaring64_bitmap_and()`, modifies `r1`. `r1` and `r2`\n are allowed to be equal.\n\n Performance hint: if you are computing the intersection between several\n bitmaps, two-by-two, it is best to start with the smallest bitmaps."]
    pub fn roaring64_bitmap_and_inplace(r1: *mut roaring64_bitmap_t, r2: *const roaring64_bitmap_t);
}
extern "C" {
    #[doc = " Check whether two bitmaps intersect."]
    pub fn roaring64_bitmap_intersect(
        r1: *const roaring64_bitmap_t,
        r2: *const roaring64_bitmap_t,
    ) -> bool;
}
extern "C" {
    #[doc = " Check whether a bitmap intersects the range [min, max)."]
    pub fn roaring64_bitmap_intersect_with_range(
        r: *const roaring64_bitmap_t,
        min: u64,
        max: u64,
    ) -> bool;
}
extern "C" {
    #[doc = " Computes the Jaccard index between two bitmaps. (Also known as the Tanimoto\n distance, or the Jaccard similarity coefficient)\n\n The Jaccard index is undefined if both bitmaps are empty."]
    pub fn roaring64_bitmap_jaccard_index(
        r1: *const roaring64_bitmap_t,
        r2: *const roaring64_bitmap_t,
    ) -> f64;
}
extern "C" {
    #[doc = " Computes the union between two bitmaps and returns new bitmap. The caller is\n responsible for free-ing the result."]
    pub fn roaring64_bitmap_or(
        r1: *const roaring64_bitmap_t,
        r2: *const roaring64_bitmap_t,
    ) -> *mut roaring64_bitmap_t;
}
extern "C" {
    #[doc = " Computes the size of the union between two bitmaps."]
    pub fn roaring64_bitmap_or_cardinality(
        r1: *const roaring64_bitmap_t,
        r2: *const roaring64_bitmap_t,
    ) -> u64;
}
extern "C" {
    #[doc = " In-place version of `roaring64_bitmap_or(), modifies `r1`."]
    pub fn roaring64_bitmap_or_inplace(r1: *mut roaring64_bitmap_t, r2: *const roaring64_bitmap_t);
}
extern "C" {
    #[doc = " Computes the symmetric difference (xor) between two bitmaps and returns a new\n bitmap. The caller is responsible for free-ing the result."]
    pub fn roaring64_bitmap_xor(
        r1: *const roaring64_bitmap_t,
        r2: *const roaring64_bitmap_t,
    ) -> *mut roaring64_bitmap_t;
}
extern "C" {
    #[doc = " Computes the size of the symmetric difference (xor) between two bitmaps."]
    pub fn roaring64_bitmap_xor_cardinality(
        r1: *const roaring64_bitmap_t,
        r2: *const roaring64_bitmap_t,
    ) -> u64;
}
extern "C" {
    #[doc = " In-place version of `roaring64_bitmap_xor()`, modifies `r1`. `r1` and `r2`\n are not allowed to be equal (that would result in an empty bitmap)."]
    pub fn roaring64_bitmap_xor_inplace(r1: *mut roaring64_bitmap_t, r2: *const roaring64_bitmap_t);
}
extern "C" {
    #[doc = " Computes the difference (andnot) between two bitmaps and returns a new\n bitmap. The caller is responsible for free-ing the result."]
    pub fn roaring64_bitmap_andnot(
        r1: *const roaring64_bitmap_t,
        r2: *const roaring64_bitmap_t,
    ) -> *mut roaring64_bitmap_t;
}
extern "C" {
    #[doc = " Computes the size of the difference (andnot) between two bitmaps."]
    pub fn roaring64_bitmap_andnot_cardinality(
        r1: *const roaring64_bitmap_t,
        r2: *const roaring64_bitmap_t,
    ) -> u64;
}
extern "C" {
    #[doc = " In-place version of `roaring64_bitmap_andnot()`, modifies `r1`. `r1` and `r2`\n are not allowed to be equal (that would result in an empty bitmap)."]
    pub fn roaring64_bitmap_andnot_inplace(
        r1: *mut roaring64_bitmap_t,
        r2: *const roaring64_bitmap_t,
    );
}
extern "C" {
    #[doc = " Compute the negation of the bitmap in the interval [min, max).\n The number of negated values is `max - min`. Areas outside the range are\n passed through unchanged."]
    pub fn roaring64_bitmap_flip(
        r: *const roaring64_bitmap_t,
        min: u64,
        max: u64,
    ) -> *mut roaring64_bitmap_t;
}
extern "C" {
    #[doc = " Compute the negation of the bitmap in the interval [min, max].\n The number of negated values is `max - min + 1`. Areas outside the range are\n passed through unchanged."]
    pub fn roaring64_bitmap_flip_closed(
        r: *const roaring64_bitmap_t,
        min: u64,
        max: u64,
    ) -> *mut roaring64_bitmap_t;
}
extern "C" {
    #[doc = " In-place version of `roaring64_bitmap_flip`. Compute the negation of the\n bitmap in the interval [min, max). The number of negated values is `max -\n min`. Areas outside the range are passed through unchanged."]
    pub fn roaring64_bitmap_flip_inplace(r: *mut roaring64_bitmap_t, min: u64, max: u64);
}
extern "C" {
    #[doc = " In-place version of `roaring64_bitmap_flip_closed`. Compute the negation of\n the bitmap in the interval [min, max]. The number of negated values is `max -\n min + 1`. Areas outside the range are passed through unchanged."]
    pub fn roaring64_bitmap_flip_closed_inplace(r: *mut roaring64_bitmap_t, min: u64, max: u64);
}
extern "C" {
    #[doc = " How many bytes are required to serialize this bitmap.\n\n This is meant to be compatible with other languages:\n https://github.com/RoaringBitmap/RoaringFormatSpec#extension-for-64-bit-implementations"]
    pub fn roaring64_bitmap_portable_size_in_bytes(r: *const roaring64_bitmap_t) -> usize;
}
extern "C" {
    #[doc = " Write a bitmap to a buffer. The output buffer should refer to at least\n `roaring64_bitmap_portable_size_in_bytes(r)` bytes of allocated memory.\n\n Returns how many bytes were written, which should match\n `roaring64_bitmap_portable_size_in_bytes(r)`.\n\n This is meant to be compatible with other languages:\n https://github.com/RoaringBitmap/RoaringFormatSpec#extension-for-64-bit-implementations\n\n This function is endian-sensitive. If you have a big-endian system (e.g., a\n mainframe IBM s390x), the data format is going to be big-endian and not\n compatible with little-endian systems.\n\n When serializing data to a file, we recommend that you also use\n checksums so that, at deserialization, you can be confident\n that you are recovering the correct data."]
    pub fn roaring64_bitmap_portable_serialize(
        r: *const roaring64_bitmap_t,
        buf: *mut ::core::ffi::c_char,
    ) -> usize;
}
extern "C" {
    #[doc = " Check how many bytes would be read (up to maxbytes) at this pointer if there\n is a valid bitmap, returns zero if there is no valid bitmap.\n\n This is meant to be compatible with other languages\n https://github.com/RoaringBitmap/RoaringFormatSpec#extension-for-64-bit-implementations"]
    pub fn roaring64_bitmap_portable_deserialize_size(
        buf: *const ::core::ffi::c_char,
        maxbytes: usize,
    ) -> usize;
}
extern "C" {
    #[doc = " Read a bitmap from a serialized buffer (reading up to maxbytes).\n In case of failure, NULL is returned.\n\n This is meant to be compatible with other languages\n https://github.com/RoaringBitmap/RoaringFormatSpec#extension-for-64-bit-implementations\n\n The function itself is safe in the sense that it will not cause buffer\n overflows: it will not read beyond the scope of the provided buffer\n (buf,maxbytes).\n\n However, for correct operations, it is assumed that the bitmap\n read was once serialized from a valid bitmap (i.e., it follows the format\n specification). If you provided an incorrect input (garbage), then the bitmap\n read may not be in a valid state and following operations may not lead to\n sensible results. In particular, the serialized array containers need to be\n in sorted order, and the run containers should be in sorted non-overlapping\n order. This is is guaranteed to happen when serializing an existing bitmap,\n but not for random inputs.\n\n If the source is untrusted, you should call\n roaring64_bitmap_internal_validate to check the validity of the\n bitmap prior to using it. Only after calling\n roaring64_bitmap_internal_validate is the bitmap considered safe for use.\n\n We also recommend that you use checksums to check that serialized data\n corresponds to the serialized bitmap. The CRoaring library does not provide\n checksumming.\n\n This function is endian-sensitive. If you have a big-endian system (e.g., a\n mainframe IBM s390x), the data format is going to be big-endian and not\n compatible with little-endian systems."]
    pub fn roaring64_bitmap_portable_deserialize_safe(
        buf: *const ::core::ffi::c_char,
        maxbytes: usize,
    ) -> *mut roaring64_bitmap_t;
}
extern "C" {
    #[doc = " Iterate over the bitmap elements. The function `iterator` is called once for\n all the values with `ptr` (can be NULL) as the second parameter of each call.\n\n `roaring_iterator64` is simply a pointer to a function that returns a bool\n and takes `(uint64_t, void*)` as inputs. True means that the iteration should\n continue, while false means that it should stop.\n\n Returns true if the `roaring64_iterator` returned true throughout (so that\n all data points were necessarily visited).\n\n Iteration is ordered from the smallest to the largest elements."]
    pub fn roaring64_bitmap_iterate(
        r: *const roaring64_bitmap_t,
        iterator: roaring_iterator64,
        ptr: *mut ::core::ffi::c_void,
    ) -> bool;
}
extern "C" {
    #[doc = " Convert the bitmap to a sorted array `out`.\n\n Caller is responsible to ensure that there is enough memory allocated, e.g.\n ```\n out = malloc(roaring64_bitmap_get_cardinality(bitmap) * sizeof(uint64_t));\n ```"]
    pub fn roaring64_bitmap_to_uint64_array(r: *const roaring64_bitmap_t, out: *mut u64);
}
